@@ -11,8 +11,6 @@ struct stepper_command_s {
 
 struct queue_end_s {
   int32_t pos;     // in steps
-  uint32_t ticks;  // in timer ticks, 0 on stopped stepper
-  uint32_t ticks_from_last_step;
   bool count_up;
   bool dir;
 };
