@@ -1,3 +1,6 @@
+pre-0.18.11:
+- Remove obsolete queue_end variables ticks and ticks_from_last_step
+
 0.18.10:
 - Reapply modified fix, which was reverted in 0.18.9
 
